// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.overrule.acceptance given: [case1] human overrules blocked review when: [t0] human runs --as overruled then: stdout shows overrule confirmation 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   └─ ✓ overruled
      └─ level 1, overruled
"
`;

exports[`driver.route.overrule.acceptance given: [case1] human overrules blocked review when: [t1] pass attempted after overrule then: stdout confirms passage 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ rejected, cached
   │   ├─ 3 blockers 🔴
   │   ├─ 7 nitpicks 🟠
   │   └─ review: .reviews/peer/1.plan._.review.i1.ec6c3f2f9d5189084f.r1._.given.by_peer.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.plan
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.plan*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ rejected, cached
   │  │       ├─ 3 blockers 🔴
   │  │       ├─ 7 nitpicks 🟠
   │  │       └─ review: .reviews/peer/1.plan._.review.i1.ec6c3f2f9d5189084f.r1._.given.by_peer.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule.acceptance given: [case2] robot attempts overrule when: [t0] robot runs --as overruled (non-TTY, production) then: stdout shows guidance 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   ├─ ✗ only humans can overrule
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck
      
      the human will run \`--as overruled\` when ready.
"
`;

exports[`driver.route.overrule.acceptance given: [case5] human forces blocked stone when: [t0] human runs --as forced then: stdout shows both approval and overrule 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   └─ ✓ forced
      ├─ overruled = ✓ (level 1)
      └─ approved  = ✓
"
`;

exports[`driver.route.overrule.acceptance given: [case6] robot attempts force when: [t0] robot runs --as forced (non-TTY, production) then: stdout shows guidance 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.plan
   ├─ ✗ only humans can force
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck
      
      the human will run \`--as forced\` when ready.
"
`;

exports[`driver.route.overrule.acceptance given: [case9] overrule bypasses reviewer malfunction (exit 1) when: [t1] pass attempted after overrule (malfunction bypassed) then: snapshot matches 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/1.feature._.review.i2.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 0/∞)
   │  │       ├─ 💥 malfunction
   │  │       └─ review: .reviews/peer/1.feature._.review.i2.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule.acceptance given: [case10] overrule bypasses reviewer constraint (exit 2) when: [t1] pass attempted after overrule (constraint bypassed) then: snapshot matches 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ ✋ constraint
   │   └─ review: .reviews/peer/1.feature._.review.i2.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 0/∞)
   │  │       ├─ constraint 0.0s
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .reviews/peer/1.feature._.review.i2.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule.acceptance given: [case11] forced bypasses reviewer malfunction when: [t1] pass attempted after force (malfunction bypassed) then: snapshot matches 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/1.feature._.review.i1.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 0/∞)
   │  │       ├─ 💥 malfunction
   │  │       └─ review: .reviews/peer/1.feature._.review.i1.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule.acceptance given: [case12] forced bypasses reviewer constraint when: [t1] pass attempted after force (constraint bypassed) then: snapshot matches 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ ✋ constraint
   │   └─ review: .reviews/peer/1.feature._.review.i1.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 0/∞)
   │  │       ├─ constraint 0.0s
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .reviews/peer/1.feature._.review.i1.d6ef1aa3fad755e23c.r1._.given.by_peer.bash.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule.acceptance given: [case13] tier escalation: L1 malfunctions, L3 runs, overrule succeeds when: [t0] initial pass attempted (L1 malfunctions, L3 passes) then: snapshot shows blocked state with L1 malfunction and L3 passed 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   ├─ options
   │  ├─ overrule the malfunction
   │  │  └─ rhx route.stone.set --stone 1.feature --as overruled
   │  └─ or fix the reviewer, then retry
   └─ guard
      ├─ artifacts
      │   └─ $route/1.feature*.md
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 0/5)
      │   │   ├─ 💥 malfunction
      │   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
      │   └─ r2: premium-checker (l3, 1/5)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.overrule.acceptance given: [case13] tier escalation: L1 malfunctions, L3 runs, overrule succeeds when: [t1] human overrules L1 malfunction then: snapshot shows overrule applied 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.feature
   └─ ✓ overruled
      └─ level 1, overruled
"
`;

exports[`driver.route.overrule.acceptance given: [case13] tier escalation: L1 malfunctions, L3 runs, overrule succeeds when: [t2] pass attempted after overrule then: snapshot matches 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/1.feature._.review.i2.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 1/5)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   ├─ r1: basic-checker (l1, 0/5)
   │  │   │   ├─ 💥 malfunction
   │  │   │   └─ review: .reviews/peer/1.feature._.review.i2.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
   │  │   └─ r2: premium-checker (l3, 1/5)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule.acceptance given: [case14] tier escalation: L1 constraint, L3 runs, overrule succeeds when: [t0] initial pass attempted (L1 constraint, L3 passes) then: snapshot shows blocked state with L1 constraint and L3 passed 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ ✋ constraint
   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = blocked
   ├─ reason = reviewer constraint
   ├─ options
   │  ├─ overrule the constraint
   │  │  └─ rhx route.stone.set --stone 1.feature --as overruled
   │  └─ or fix the reviewer, then retry
   └─ guard
      ├─ artifacts
      │   └─ $route/1.feature*.md
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 0/5)
      │   │   ├─ constraint 0.0s
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
      │   └─ r2: premium-checker (l3, 1/5)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.overrule.acceptance given: [case14] tier escalation: L1 constraint, L3 runs, overrule succeeds when: [t1] human overrules L1 constraint then: snapshot shows overrule applied 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.feature
   └─ ✓ overruled
      └─ level 1, overruled
"
`;

exports[`driver.route.overrule.acceptance given: [case14] tier escalation: L1 constraint, L3 runs, overrule succeeds when: [t2] pass attempted after overrule then: snapshot matches 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ ✋ constraint
   │   └─ review: .reviews/peer/1.feature._.review.i2.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 1/5)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   ├─ r1: basic-checker (l1, 0/5)
   │  │   │   ├─ constraint 0.0s
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .reviews/peer/1.feature._.review.i2.bf3993d1d36b238918.r1._.given.by_peer.basic-checker.md
   │  │   └─ r2: premium-checker (l3, 1/5)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .reviews/peer/1.feature._.review.i1.bf3993d1d36b238918.r2._.given.by_peer.premium-checker.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.overrule.acceptance given: [case15] leveled overrule: L1 rejects (blockers), overrule unlocks L3 when: [t1] human overrules the active level (L1) then: snapshot shows active + ready levels 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.feature
   └─ ✓ overruled
      ├─ level 1, overruled
      └─ level 3, ready
"
`;

exports[`driver.route.overrule.acceptance given: [case15] leveled overrule: L1 rejects (blockers), overrule unlocks L3 when: [t2] pass attempted after the L1 overrule then: snapshot matches 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.feature._.review.i1.61a1a4cb139b1d868b.r1._.given.by_peer.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.feature._.review.i2.61a1a4cb139b1d868b.r2._.given.by_peer.premium-checker.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   ├─ r1: basic-checker (l1, 1/5)
   │  │   │   ├─ rejected, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .reviews/peer/1.feature._.review.i1.61a1a4cb139b1d868b.r1._.given.by_peer.basic-checker.md
   │  │   └─ r2: premium-checker (l3, 1/5)
   │  │       └─ awaits l1 terminal
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
